--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,7 +53,7 @@ setw -g monitor-activity off
 set -g bell-action none
 
 # Open pane in same path
-bind c new-window -c "#{pane_current_path}"
+bind c new-window -a -c "#{pane_current_path}"
 bind '%' split-window -h -c '#{pane_current_path}'
 bind '"' split-window -v -c '#{pane_current_path}'
 bind v split-window -h -c '#{pane_current_path}'
@@ -79,6 +79,8 @@ bind -r L resize-pane -R 10
 
 # Statusbar
 bind-key Z set status
+# Zoom
+bind-key o resize-pane -Z
 
 set -g status-position bottom
 set -g status-justify left
