--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -199,7 +199,8 @@ colors:
 
   # Normal colors
   normal:
-    black:   '0x7a8478'
+    # black:   '0x7a8478'
+    black:   '0x262323'
     red:     '0xe67e80'
     green:   '0xa7c080'
     yellow:  '0xdbbc7f'
