--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,7 @@
 
 bind-key r source-file ~/.tmux.conf \;
 # display-message "~/.tmux.conf reloaded"
-bind-key M split-window -h "$EDITOR ~/.tmux.conf"
+bind-key , split-window -h "$EDITOR ~/.tmux.conf"
 
 set -g default-command "${SHELL}"
 
@@ -61,6 +61,9 @@ bind s split-window -v -c '#{pane_current_path}'
 
 bind-key -n C-Tab next-window
 bind-key -n C-S-Tab previous-window
+
+bind C-n next-window
+bind C-b previous-window
 
 # bind-key -n M-l next-window
 # bind-key -n M-h previous-window
