--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -63,7 +63,8 @@ bind-key -n C-Tab next-window
 bind-key -n C-S-Tab previous-window
 
 bind C-n next-window
-bind C-b previous-window
+bind C-b last-window
+bind C-v previous-window
 
 # bind-key -n M-l next-window
 # bind-key -n M-h previous-window
@@ -88,7 +89,7 @@ bind-key o resize-pane -Z
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set -g status-right '#[fg=colour240]▗#[fg=colour250,bg=colour240] %d %b %a #[fg=colour247]▗#[fg=colour237,bg=colour247] %H:%M #[fg=colour247,bg=default]▘'
+set -g status-right '#[fg=colour240]▗#[fg=colour250,bg=colour240] %d %b/%m %a #[fg=colour247]▗#[fg=colour237,bg=colour247] %H:%M #[fg=colour247,bg=default]▘'
 set -g status-right-length 50
 set -g status-left-length 0
 
