--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -75,11 +75,14 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+bind q kill-pane
+
 # Resize pane shortcuts
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
+
 
 # Statusbar
 bind-key Z set status
