--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -66,6 +66,9 @@ bind C-n next-window
 bind C-b last-window
 bind C-v previous-window
 
+# bind { swap-window -t -1\; select-window -t -1
+# bind } swap-window -t +1\; select-window -t +1
+
 # bind-key -n M-l next-window
 # bind-key -n M-h previous-window
 
@@ -92,7 +95,7 @@ bind-key o resize-pane -Z
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set -g status-right '#[fg=colour240]▗#[fg=colour250,bg=colour240] %d %b/%m %a #[fg=colour247]▗#[fg=colour237,bg=colour247] %H:%M #[fg=colour247,bg=default]▘'
+set -g status-right '#[fg=colour240]▗#[fg=colour250,bg=colour240] %d %b:%m %a #[fg=colour247]▗#[fg=colour237,bg=colour247] %H:%M #[fg=colour247,bg=default]▘'
 set -g status-right-length 50
 set -g status-left-length 0
 
