--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,9 @@ set-option -gas terminal-overrides '*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256
 set -g status-keys vi
 setw -g mode-keys vi
 
+# Vim
+set-option -g focus-events on
+
 # CTRL-*
 set-window-option -g xterm-keys on
 set-option -gw xterm-keys on
