--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,7 @@ bind-key , split-window -h "$EDITOR ~/.tmux.conf"
 set -g default-command "${SHELL}"
 
 # Server options
-set-option -gs default-terminal "xterm-256color"
+set-option -gs default-terminal "screen-256color"
 
 # Enable True Color and RGB support
 set-option -gas terminal-overrides "*:Tc"
