--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -129,7 +129,7 @@ font:
   #
   # Thin strokes are suitable for retina displays, but for non-retina screens
   # it is recommended to set `use_thin_strokes` to `false`.
-  use_thin_strokes: false
+  use_thin_strokes: true
 
 
   # Bold font face
@@ -549,7 +549,9 @@ hints:
    - regex: "[A-Z]+-\\d+"
      command:
        program: bash
-       args: ["-c", "open \"https://jr.avito.ru/browse/${0:-}\""]
+       # args: ["-c", "open \"https://jr.avito.ru/browse/${0:-}\""]
+       args: ["-c", "open \"https://woltwide.atlassian.net/browse/${0:-}\""]
+     # post_processing: true
      # post_processing: true
      mouse:
        enabled: true
