--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -68,6 +68,8 @@ bind-key -n C-S-Tab previous-window
 bind C-n next-window
 bind C-b last-window
 bind C-v previous-window
+bind N swap-window -t +1\; select-window -t +1
+bind V swap-window -t -1\; select-window -t -1
 
 # bind { swap-window -t -1\; select-window -t -1
 # bind } swap-window -t +1\; select-window -t +1
