--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -123,6 +123,7 @@ font:
     # style: Semibold
     # family: SF Mono
     # family: Fantasque Sans Mono
+    # family: Iosevka Fixed
     family: Iosevka Fixed
     # family: Consolas
     # family: Cascadia Code
