--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -29,7 +29,7 @@ window:
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
   # background_opacity: 0.95
-  opacity: .97
+  opacity: 1 #.97
 
   # Window dimensions (changes require restart)
   #
@@ -110,21 +110,43 @@ window:
 
 # Font configuration
 font:
+  #
+  size: 14
+  normal:
+    family: SF Mono
+    style: Regular
+  #
+  # size: 16.5
+  # normal:
+  #   family: Fantasque Sans Mono
+  #   style: Regular
+  #
+  # size: 14
+  # normal:
+  #   family: Iosevka Fixed
+  #   style: Extended
+  #
+  # size: 14
+  # normal:
+  #   family: Cascadia Code
+  #   style: Regular
+  #
+  #size: 14.5
+  #normal:
+  #  family: Source Code Pro
+  #  style: Medium
+  ##
   # size: 19.5
   # size: 14.5 # SF Mono
   # size: 16.5 # Fantasque Sans Mono
   # size: 14.5 # Source Code Pro
   # size: 14.5 # Amazon Ember Mono
-  size: 14 # Fantasque Sans Mono
-  normal:
-    style: Extended
     # style: Regular
     # style: Medium
     # style: Semibold
     # family: SF Mono
     # family: Fantasque Sans Mono
     # family: Iosevka Fixed
-    family: Iosevka Fixed
     # family: Consolas
     # family: Cascadia Code
     # family: Ubuntu Mono
