--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -115,6 +115,9 @@ font:
   normal:
     family: SF Mono
     style: Regular
+  bold:
+    family: SF Mono
+    style: Bold
   #
   # size: 16.5
   # normal:
