--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -103,7 +103,7 @@ bind-key o resize-pane -Z
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set -g status-right '#[fg=colour240]▗#[fg=colour250,bg=colour240] %d.%m:%b %a #[fg=colour247]▗#[fg=colour237,bg=colour247] %H:%M #[fg=colour247,bg=default]▘'
+set -g status-right '#[fg=colour240]▗#[fg=colour250,bg=colour240] %a %d.%m %b #[fg=colour247]▗#[fg=colour237,bg=colour247] %H:%M #[fg=colour247,bg=default]▘'
 set -g status-right-length 50
 set -g status-left-length 0
 
