--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -29,7 +29,7 @@ window:
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
   # background_opacity: 0.95
-  opacity: 1 #.97
+  opacity: 1 # .95
 
   # Window dimensions (changes require restart)
   #
@@ -111,13 +111,21 @@ window:
 # Font configuration
 font:
   #
-  size: 14
+  size: 13
   normal:
-    family: SF Mono
-    style: Regular
+    family: Martian Mono
+    style: Std Lt
   bold:
-    family: SF Mono
-    style: Bold
+    family: Martian Mono
+    style: Std Md
+  #
+  # size: 14
+  # normal:
+  #   family: SF Mono
+  #   style: Regular
+  # bold:
+  #   family: SF Mono
+  #   style: Bold
   #
   # size: 16.5
   # normal:
