--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,6 +32,8 @@ set-option -g focus-events on
 set-window-option -g xterm-keys on
 set-option -gw xterm-keys on
 
+# set prefix2 C-n
+
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
@@ -61,6 +63,12 @@ bind '%' split-window -h -c '#{pane_current_path}'
 bind '"' split-window -v -c '#{pane_current_path}'
 bind v split-window -h -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
+bind S split-window -v -c '#{pane_current_path}' \; resize-pane -y '30%'
+bind g choose-session
+bind G command-prompt -p "new session:" "new -s %1"
+bind r command-prompt -p "window name:" "rename-window %1"
+bind R command-prompt -p "session name:" "rename-session %1"
+unbind-key n
 set -g pane-border-lines heavy
 set -g pane-border-style fg=#665555
 set -g pane-active-border-style fg=#AA6666
@@ -85,6 +93,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+# bind -n C-h select-pane -L
+# bind -n C-j select-pane -D
+# bind -n C-k select-pane -U
+# bind -n C-l select-pane -R
 
 bind q kill-pane
 
@@ -100,6 +112,8 @@ bind-key Z set status
 # Zoom
 bind-key o resize-pane -Z
 
+# set -g status-interval 1
+#  #(date)
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
