--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 # https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 # https://github.com/nicknisi/dotfiles/blob/main/tmux/tmux.conf.symlink
 
-bind-key r source-file ~/.tmux.conf \;
+bind-key > source-file ~/.tmux.conf \;
 # display-message "~/.tmux.conf reloaded"
 bind-key , split-window -h "$EDITOR ~/.tmux.conf"
 
@@ -132,6 +132,7 @@ setw -g window-status-current-format '#[fg=colour246]▗#[fg=colour7,bg=colour24
 # Statusbar: windows
 setw -g window-status-style 'fg=colour0 bg=default'
 setw -g window-status-format '#[fg=colour239]▗#[fg=colour4,bg=colour239] #I #[fg=colour250]#W#[fg=colour244] #F #[fg=colour239,bg=default]▘'
+setw -g window-status-separator ''
 
 setw -g window-status-bell-style 'bold'
 
