--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -112,13 +112,26 @@ window:
 # Font configuration
 font:
   #
-  size: 12.5
-  normal:
-    family: Martian Mono
-    style: Std Lt
-  bold:
-    family: Martian Mono
-    style: Std Md
+  # size: 14
+  # normal:
+  #   family: Roboto Mono
+  #   style: Medium
+  # bold:
+  #   family: Roboto Mono
+  #   style: Bold
+  #
+  # size: 14
+  # normal:
+  #   family: Menlo
+  #   style: Regular
+  #
+  # size: 12.5
+  # normal:
+  #   family: Martian Mono
+  #   style: Std Lt
+  # bold:
+  #   family: Martian Mono
+  #   style: Std Md
   #
   # size: 14
   # normal:
@@ -133,10 +146,15 @@ font:
   #   family: Fantasque Sans Mono
   #   style: Regular
   #
-  # size: 14
+  # size: 13
   # normal:
-  #   family: Iosevka Fixed
-  #   style: Extended
+  #   family: Monoid
+  #   style: Regular
+  #
+  size: 14.5
+  normal:
+    family: Iosevka Fixed
+    style: Extended
   #
   # size: 14
   # normal:
@@ -147,6 +165,11 @@ font:
   #normal:
   #  family: Source Code Pro
   #  style: Medium
+  #
+  # size: 16.5
+  # normal:
+  #   family: Ubuntu Mono
+  #   style: Regular
   ##
   # size: 19.5
   # size: 14.5 # SF Mono
