--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -113,6 +113,7 @@ bind-key Z set status
 bind-key o resize-pane -Z
 
 # set -g status-interval 1
+set -g allow-rename off
 #  #(date)
 set -g status-position bottom
 set -g status-justify left
