--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -118,7 +118,7 @@ set -g allow-rename off
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set -g status-right '#[fg=colour240]▗#[fg=colour250,bg=colour240] %a %d.%m %b #[fg=colour247]▗#[fg=colour237,bg=colour247] %H:%M #[fg=colour247,bg=default]▘'
+set -g status-right '#[fg=colour8]▗#[fg=colour15,bg=colour8] %a %d.%m %b #[fg=colour8,bg=default]▘#[fg=colour15,bg=default] %H:%M #[fg=default,bg=default]'
 set -g status-right-length 50
 set -g status-left-length 0
 
@@ -127,12 +127,14 @@ set -g status-style fg=darkgray
 
 # Statusbar: current windows
 # setw -g window-status-current-style 'fg=colour237 bg=default bold'
-setw -g window-status-current-style 'fg=colour237 bg=default'
-setw -g window-status-current-format '#[fg=colour246]▗#[fg=colour7,bg=colour246] #I #[fg=colour237]#W#[fg=colour7] #F #[fg=colour246,bg=default]▘'
+# setw -g window-status-current-style 'fg=colour237 bg=default'
+# setw -g window-status-current-format '#[fg=colour8]▗#[fg=colour7,bg=colour8] #I #[fg=colour7]#W#[fg=colour7] #F #[fg=colour8,bg=default]▘'
+setw -g window-status-current-format '#[fg=colour8]▗#[fg=colour7,bg=colour8] #I #[fg=colour7]#W #[fg=colour8,bg=default]▘'
 
 # Statusbar: windows
-setw -g window-status-style 'fg=colour0 bg=default'
-setw -g window-status-format '#[fg=colour239]▗#[fg=colour4,bg=colour239] #I #[fg=colour250]#W#[fg=colour244] #F #[fg=colour239,bg=default]▘'
+# setw -g window-status-style 'fg=colour0 bg=default'
+# setw -g window-status-format ' #[fg=colour8,bg=default] #I #[fg=colour8]#W#[fg=color8] #F #[fg=default,bg=default] '
+setw -g window-status-format '#[fg=colour8,bg=default] #I #[fg=colour8]#W #[fg=default,bg=default] '
 setw -g window-status-separator ''
 
 setw -g window-status-bell-style 'bold'
