--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,7 +37,7 @@ set-option -gw xterm-keys on
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-bind-key C-E run-shell "tmux capture-pane -p | nvim -R"
+bind-key e run-shell "tmux capture-pane -p | nvim '+norm G' -R -"
 
 set -gs escape-time 10
 set -g mouse on
@@ -99,6 +99,8 @@ bind l select-pane -R
 # bind -n C-l select-pane -R
 
 bind q kill-pane
+# close windows to the right
+# bind Q run-shell "tmux list-windows -F '#{window_index} #{window_id}' | awk '$1 > '$(tmux list-windows -f '#{==:#{window_active},1}' -F '#{window_index}')'{ system(\"tmux kill-window -t \" $2) }'"
 
 # Resize pane shortcuts
 bind -r H resize-pane -L 5
