--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -24,13 +24,14 @@
   #TERM: screen-256color
 
 window:
+  option_as_alt: Both
   # Background opacity
   #
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
   # background_opacity: 0.95
-  # opacity: 1
-  opacity: 0.98
+  opacity: 1
+  # opacity: 0.98
 
   # Window dimensions (changes require restart)
   #
@@ -125,7 +126,7 @@ font:
   #   family: Menlo
   #   style: Regular
   #
-  # size: 12.5
+  # size: 13
   # normal:
   #   family: Martian Mono
   #   style: Std Lt
@@ -142,9 +143,35 @@ font:
   #   family: SF Mono
   #   style: Bold
   #
+  # size: 13.5
+  # normal:
+  #   family: Noto Sans Mono SemiCondensed
+  #   style: Regular
+  #
+  # size: 16.5
+  # normal:
+  #   family: Noto Sans Mono
+  #   style: Regular
+  #
+  # size: 14
+  # normal:
+  #   family: Jetbrains Mono
+  #   style: Regular
+  #
   # size: 16.5
   # normal:
   #   family: Fantasque Sans Mono
+  #   style: Regular
+  #
+  # size: 15
+  # normal:
+  #   family: Victor Mono
+  #   style: Regular
+  #   # style: Medium
+  #
+  # size: 15.5
+  # normal:
+  #   family: Dank Mono
   #   style: Regular
   #
   # size: 13
@@ -152,8 +179,23 @@ font:
   #   family: Monoid
   #   style: Regular
   #
-  # size: 14.5
-  size: 14
+  # size: 14
+  # normal:
+  #   family: IBM Plex Mono
+  #   style: Regular
+  #
+  # size: 15
+  # normal:
+  #   family: Overpass Mono
+  #   style: Regular
+  #
+  # size: 15
+  # normal:
+  #   family: Hermit
+  #   style: Regular
+  #
+  size: 15
+  # # size: 16.9
   normal:
     family: Iosevka Fixed
     style: Extended
@@ -163,19 +205,20 @@ font:
     family: Iosevka Fixed
     # style: Extended
     style: Semibold Extended
+    # style: Bold Extended
   #
   #
   # size: 14
   # normal:
   #   family: Cascadia Code
-  #   style: Regular
+  #   style: SemiLight
   #
   #size: 14.5
   #normal:
   #  family: Source Code Pro
   #  style: Medium
   #
-  # size: 16.5
+  # size: 17
   # normal:
   #   family: Ubuntu Mono
   #   style: Regular
@@ -618,7 +661,7 @@ hints:
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
 
-key_bindings:
+# key_bindings:
   #- { key: Paste,                                       action: Paste          }
   #- { key: Copy,                                        action: Copy           }
   #- { key: L,         mods: Control,                    action: ClearLogNotice }
@@ -711,82 +754,83 @@ key_bindings:
   # https://github.com/alacritty/alacritty/issues/2688
   # - { key: Tab, mods: Control, chars: "\x1b[27;5;9~" }       # 5 is ctrl, 9 is tab
   # - { key: Tab, mods: Control|Shift, chars: "\x1b[27;6;9~" } # 6 is ctrl+shift, 9 is tab
-  # Option as alt
-  - { key: A,         mods: Alt,       chars: "\x1ba" }
-  - { key: B,         mods: Alt,       chars: "\x1bb" }
-  - { key: C,         mods: Alt,       chars: "\x1bc" }
-  - { key: D,         mods: Alt,       chars: "\x1bd" }
-  - { key: E,         mods: Alt,       chars: "\x1be" }
-  - { key: F,         mods: Alt,       chars: "\x1bf" }
-  - { key: G,         mods: Alt,       chars: "\x1bg" }
-  - { key: H,         mods: Alt,       chars: "\x1bh" }
-  - { key: I,         mods: Alt,       chars: "\x1bi" }
-  - { key: J,         mods: Alt,       chars: "\x1bj" }
-  - { key: K,         mods: Alt,       chars: "\x1bk" }
-  - { key: L,         mods: Alt,       chars: "\x1bl" }
-  - { key: M,         mods: Alt,       chars: "\x1bm" }
-  - { key: N,         mods: Alt,       chars: "\x1bn" }
-  - { key: O,         mods: Alt,       chars: "\x1bo" }
-  - { key: P,         mods: Alt,       chars: "\x1bp" }
-  - { key: Q,         mods: Alt,       chars: "\x1bq" }
-  - { key: R,         mods: Alt,       chars: "\x1br" }
-  - { key: S,         mods: Alt,       chars: "\x1bs" }
-  - { key: T,         mods: Alt,       chars: "\x1bt" }
-  - { key: U,         mods: Alt,       chars: "\x1bu" }
-  - { key: V,         mods: Alt,       chars: "\x1bv" }
-  - { key: W,         mods: Alt,       chars: "\x1bw" }
-  - { key: X,         mods: Alt,       chars: "\x1bx" }
-  - { key: Y,         mods: Alt,       chars: "\x1by" }
-  - { key: Z,         mods: Alt,       chars: "\x1bz" }
-  - { key: A,         mods: Alt|Shift, chars: "\x1bA" }
-  - { key: B,         mods: Alt|Shift, chars: "\x1bB" }
-  - { key: C,         mods: Alt|Shift, chars: "\x1bC" }
-  - { key: D,         mods: Alt|Shift, chars: "\x1bD" }
-  - { key: E,         mods: Alt|Shift, chars: "\x1bE" }
-  - { key: F,         mods: Alt|Shift, chars: "\x1bF" }
-  - { key: G,         mods: Alt|Shift, chars: "\x1bG" }
-  - { key: H,         mods: Alt|Shift, chars: "\x1bH" }
-  - { key: I,         mods: Alt|Shift, chars: "\x1bI" }
-  - { key: J,         mods: Alt|Shift, chars: "\x1bJ" }
-  - { key: K,         mods: Alt|Shift, chars: "\x1bK" }
-  - { key: L,         mods: Alt|Shift, chars: "\x1bL" }
-  - { key: M,         mods: Alt|Shift, chars: "\x1bM" }
-  - { key: N,         mods: Alt|Shift, chars: "\x1bN" }
-  - { key: O,         mods: Alt|Shift, chars: "\x1bO" }
-  - { key: P,         mods: Alt|Shift, chars: "\x1bP" }
-  - { key: Q,         mods: Alt|Shift, chars: "\x1bQ" }
-  - { key: R,         mods: Alt|Shift, chars: "\x1bR" }
-  - { key: S,         mods: Alt|Shift, chars: "\x1bS" }
-  - { key: T,         mods: Alt|Shift, chars: "\x1bT" }
-  - { key: U,         mods: Alt|Shift, chars: "\x1bU" }
-  - { key: V,         mods: Alt|Shift, chars: "\x1bV" }
-  - { key: W,         mods: Alt|Shift, chars: "\x1bW" }
-  - { key: X,         mods: Alt|Shift, chars: "\x1bX" }
-  - { key: Y,         mods: Alt|Shift, chars: "\x1bY" }
-  - { key: Z,         mods: Alt|Shift, chars: "\x1bZ" }
-  - { key: Key1,      mods: Alt,       chars: "\x1b1" }
-  - { key: Key2,      mods: Alt,       chars: "\x1b2" }
-  - { key: Key3,      mods: Alt,       chars: "\x1b3" }
-  - { key: Key4,      mods: Alt,       chars: "\x1b4" }
-  - { key: Key5,      mods: Alt,       chars: "\x1b5" }
-  - { key: Key6,      mods: Alt,       chars: "\x1b6" }
-  - { key: Key7,      mods: Alt,       chars: "\x1b7" }
-  - { key: Key8,      mods: Alt,       chars: "\x1b8" }
-  - { key: Key9,      mods: Alt,       chars: "\x1b9" }
-  - { key: Key0,      mods: Alt,       chars: "\x1b0" }
-  - { key: Space,     mods: Control,   chars: "\x00"  } # Ctrl + Space
-  - { key: Grave,     mods: Alt,       chars: "\x1b`" } # Alt + `
-  - { key: Grave,     mods: Alt|Shift, chars: "\x1b~" } # Alt + ~
-  - { key: Period,    mods: Alt,       chars: "\x1b." } # Alt + .
-  - { key: Key8,      mods: Alt|Shift, chars: "\x1b*" } # Alt + *
-  - { key: Key3,      mods: Alt|Shift, chars: "\x1b#" } # Alt + #
-  - { key: Period,    mods: Alt|Shift, chars: "\x1b>" } # Alt + >
-  - { key: Comma,     mods: Alt|Shift, chars: "\x1b<" } # Alt + <
-  - { key: Minus,     mods: Alt|Shift, chars: "\x1b_" } # Alt + _
-  - { key: Key5,      mods: Alt|Shift, chars: "\x1b%" } # Alt + %
-  - { key: Key6,      mods: Alt|Shift, chars: "\x1b^" } # Alt + ^
-  - { key: Backslash, mods: Alt,       chars: "\x1b\\"} # Alt + \
-  - { key: Backslash, mods: Alt|Shift, chars: "\x1b|" } # Alt + |
+
+  # Option as alt (replaced by option_as_alt)
+  # - { key: A,         mods: Alt,       chars: "\x1ba" }
+  # - { key: B,         mods: Alt,       chars: "\x1bb" }
+  # - { key: C,         mods: Alt,       chars: "\x1bc" }
+  # - { key: D,         mods: Alt,       chars: "\x1bd" }
+  # - { key: E,         mods: Alt,       chars: "\x1be" }
+  # - { key: F,         mods: Alt,       chars: "\x1bf" }
+  # - { key: G,         mods: Alt,       chars: "\x1bg" }
+  # - { key: H,         mods: Alt,       chars: "\x1bh" }
+  # - { key: I,         mods: Alt,       chars: "\x1bi" }
+  # - { key: J,         mods: Alt,       chars: "\x1bj" }
+  # - { key: K,         mods: Alt,       chars: "\x1bk" }
+  # - { key: L,         mods: Alt,       chars: "\x1bl" }
+  # - { key: M,         mods: Alt,       chars: "\x1bm" }
+  # - { key: N,         mods: Alt,       chars: "\x1bn" }
+  # - { key: O,         mods: Alt,       chars: "\x1bo" }
+  # - { key: P,         mods: Alt,       chars: "\x1bp" }
+  # - { key: Q,         mods: Alt,       chars: "\x1bq" }
+  # - { key: R,         mods: Alt,       chars: "\x1br" }
+  # - { key: S,         mods: Alt,       chars: "\x1bs" }
+  # - { key: T,         mods: Alt,       chars: "\x1bt" }
+  # - { key: U,         mods: Alt,       chars: "\x1bu" }
+  # - { key: V,         mods: Alt,       chars: "\x1bv" }
+  # - { key: W,         mods: Alt,       chars: "\x1bw" }
+  # - { key: X,         mods: Alt,       chars: "\x1bx" }
+  # - { key: Y,         mods: Alt,       chars: "\x1by" }
+  # - { key: Z,         mods: Alt,       chars: "\x1bz" }
+  # - { key: A,         mods: Alt|Shift, chars: "\x1bA" }
+  # - { key: B,         mods: Alt|Shift, chars: "\x1bB" }
+  # - { key: C,         mods: Alt|Shift, chars: "\x1bC" }
+  # - { key: D,         mods: Alt|Shift, chars: "\x1bD" }
+  # - { key: E,         mods: Alt|Shift, chars: "\x1bE" }
+  # - { key: F,         mods: Alt|Shift, chars: "\x1bF" }
+  # - { key: G,         mods: Alt|Shift, chars: "\x1bG" }
+  # - { key: H,         mods: Alt|Shift, chars: "\x1bH" }
+  # - { key: I,         mods: Alt|Shift, chars: "\x1bI" }
+  # - { key: J,         mods: Alt|Shift, chars: "\x1bJ" }
+  # - { key: K,         mods: Alt|Shift, chars: "\x1bK" }
+  # - { key: L,         mods: Alt|Shift, chars: "\x1bL" }
+  # - { key: M,         mods: Alt|Shift, chars: "\x1bM" }
+  # - { key: N,         mods: Alt|Shift, chars: "\x1bN" }
+  # - { key: O,         mods: Alt|Shift, chars: "\x1bO" }
+  # - { key: P,         mods: Alt|Shift, chars: "\x1bP" }
+  # - { key: Q,         mods: Alt|Shift, chars: "\x1bQ" }
+  # - { key: R,         mods: Alt|Shift, chars: "\x1bR" }
+  # - { key: S,         mods: Alt|Shift, chars: "\x1bS" }
+  # - { key: T,         mods: Alt|Shift, chars: "\x1bT" }
+  # - { key: U,         mods: Alt|Shift, chars: "\x1bU" }
+  # - { key: V,         mods: Alt|Shift, chars: "\x1bV" }
+  # - { key: W,         mods: Alt|Shift, chars: "\x1bW" }
+  # - { key: X,         mods: Alt|Shift, chars: "\x1bX" }
+  # - { key: Y,         mods: Alt|Shift, chars: "\x1bY" }
+  # - { key: Z,         mods: Alt|Shift, chars: "\x1bZ" }
+  # - { key: Key1,      mods: Alt,       chars: "\x1b1" }
+  # - { key: Key2,      mods: Alt,       chars: "\x1b2" }
+  # - { key: Key3,      mods: Alt,       chars: "\x1b3" }
+  # - { key: Key4,      mods: Alt,       chars: "\x1b4" }
+  # - { key: Key5,      mods: Alt,       chars: "\x1b5" }
+  # - { key: Key6,      mods: Alt,       chars: "\x1b6" }
+  # - { key: Key7,      mods: Alt,       chars: "\x1b7" }
+  # - { key: Key8,      mods: Alt,       chars: "\x1b8" }
+  # - { key: Key9,      mods: Alt,       chars: "\x1b9" }
+  # - { key: Key0,      mods: Alt,       chars: "\x1b0" }
+  # - { key: Space,     mods: Control,   chars: "\x00"  } # Ctrl + Space
+  # - { key: Grave,     mods: Alt,       chars: "\x1b`" } # Alt + `
+  # - { key: Grave,     mods: Alt|Shift, chars: "\x1b~" } # Alt + ~
+  # - { key: Period,    mods: Alt,       chars: "\x1b." } # Alt + .
+  # - { key: Key8,      mods: Alt|Shift, chars: "\x1b*" } # Alt + *
+  # - { key: Key3,      mods: Alt|Shift, chars: "\x1b#" } # Alt + #
+  # - { key: Period,    mods: Alt|Shift, chars: "\x1b>" } # Alt + >
+  # - { key: Comma,     mods: Alt|Shift, chars: "\x1b<" } # Alt + <
+  # - { key: Minus,     mods: Alt|Shift, chars: "\x1b_" } # Alt + _
+  # - { key: Key5,      mods: Alt|Shift, chars: "\x1b%" } # Alt + %
+  # - { key: Key6,      mods: Alt|Shift, chars: "\x1b^" } # Alt + ^
+  # - { key: Backslash, mods: Alt,       chars: "\x1b\\"} # Alt + \
+  # - { key: Backslash, mods: Alt|Shift, chars: "\x1b|" } # Alt + |
 
   # - { key: H, mods: Command, chars: "\x1b[27;9;27~" } # 9 is cmd, 27 is h
   # - { key: L, mods: Command, chars: "\x1b[27;9;31~" } # 9 is cmd, 31 is l
