--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -30,8 +30,8 @@ window:
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
   # background_opacity: 0.95
-  opacity: 1
-  # opacity: 0.98
+  # opacity: 1
+  opacity: 0.98
 
   # Window dimensions (changes require restart)
   #
@@ -116,7 +116,7 @@ font:
   # size: 14
   # normal:
   #   family: Roboto Mono
-  #   style: Medium
+  #   style: Regular
   # bold:
   #   family: Roboto Mono
   #   style: Bold
@@ -134,21 +134,21 @@ font:
   #   family: Martian Mono
   #   style: Std Md
   #
-  # size: 14
-  # normal:
-  #   family: SF Mono
-  #   style: Regular
-  #   # style: Light
-  # bold:
-  #   family: SF Mono
-  #   style: Bold
+  size: 13.5
+  normal:
+    family: SF Mono
+    style: Regular
+    # style: Light
+  bold:
+    family: SF Mono
+    style: Bold
   #
   # size: 13.5
   # normal:
   #   family: Noto Sans Mono SemiCondensed
   #   style: Regular
   #
-  # size: 16.5
+  # size: 13.5
   # normal:
   #   family: Noto Sans Mono
   #   style: Regular
@@ -156,6 +156,11 @@ font:
   # size: 14
   # normal:
   #   family: Jetbrains Mono
+  #   style: Light
+  #
+  # size: 14
+  # normal:
+  #   family: Fira Code
   #   style: Regular
   #
   # size: 16.5
@@ -194,18 +199,18 @@ font:
   #   family: Hermit
   #   style: Regular
   #
-  size: 15
-  # # size: 16.9
-  normal:
-    family: Iosevka Fixed
-    style: Extended
-    # style: Light Extended
-    # style: Light Extended
-  bold:
-    family: Iosevka Fixed
-    # style: Extended
-    style: Semibold Extended
-    # style: Bold Extended
+  # size: 15
+  # # # size: 16.9
+  # normal:
+  #   family: Iosevka Fixed
+  #   style: Extended
+  #   # style: Light Extended
+  #   # style: Light Extended
+  # bold:
+  #   family: Iosevka Fixed
+  #   # style: Extended
+  #   style: Semibold Extended
+  #   # style: Bold Extended
   #
   #
   # size: 14
