--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,7 +45,7 @@ bind-key e {
 	capture-pane  -T -S - -b capture
 	# The \_s atom match any white space including new line. The \%$ atom match the end of the buffer.
 	# +'%s/\_s*\%$//e'
-	display-popup -E -x0% -y0% -w100% -h99% "tmux show-buffer -b capture | nvim -R +'norm G'"
+	display-popup -E -x0% -y0% -w100% -h99% "tmux show-buffer -b capture | nvim -R +'norm G{}\$zb'"
 	delete-buffer -b capture
 }
 
@@ -120,7 +120,7 @@ bind-key -r L resize-pane -R 5
 
 
 # Statusbar
-bind-key Z set-option status
+bind-key z set-option status
 # Zoom
 bind-key o resize-pane -Z
 
