--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,7 +45,7 @@ bind-key e {
 	capture-pane  -T -S - -b capture
 	# The \_s atom match any white space including new line. The \%$ atom match the end of the buffer.
 	# +'%s/\_s*\%$//e'
-	display-popup -E -x0% -y0% -w100% -h99% "tmux show-buffer -b capture | nvim -R +'norm G{}\$zb'"
+	display-popup -E -x0% -y0% -w100% -h99% "tmux show-buffer -b capture | nvim +'norm G{}\$zb'"
 	delete-buffer -b capture
 }
 
