--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -41,18 +41,18 @@ y = 15
 # normal = {style = "Regular", family = "Fantasque Sans Mono"}
 # bold = {style = "Bold"}
 
-# size = 13.8
-# # normal = {style = "Regular", family = "SF Mono"}
-# normal = {style = "Light", family = "SF Mono"}
-# bold = {style = "Medium"}
+size = 13.8
+# normal = {style = "Regular", family = "SF Mono"}
+normal = {style = "Light", family = "SF Mono"}
+bold = {style = "Medium"}
 
 # size = 14
 # normal = {family = "IBM Plex Mono", style = "Light" }
 # bold = {style = "SemiBold"}
 
-size = 15
-normal = {family = "Andale Mono", style = "Regular" }
-bold = {style = "SemiBold"}
+# size = 15
+# normal = {family = "Andale Mono", style = "Regular" }
+# bold = {style = "SemiBold"}
 
 # family = "Martian Mono"
 # family = "Iosevka Fixed"
