--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -14,6 +14,10 @@ x = 15
 y = 15
 
 [font]
+# size = 13.8
+# normal = {style = "Light", family = "Geist Mono"}
+# bold = {style = "Medium"}
+
 # size = 14
 # normal = {family = "JetBrains Mono", style = "Light" }
 # bold = {style = "Medium"}
