--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -24,7 +24,7 @@ bold = {style = "SemiBold Extended"}
 # bold = {style = "Medium"}
 
 # size = 14
-# normal = {family = "JetBrains Mono", style = "Light" }
+# normal = {family = "JetBrains Mono", style = "ExtraLight" }
 # bold = {style = "Medium"}
 
 # size = 14
