--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -3,7 +3,7 @@ live_config_reload = true
 
 [window]
 decorations = "buttonless"
-dynamic_title = true
+dynamic_title = false
 # opacity = 1
 opacity = 0.93
 blur = true
